# CMakeList.txt : fichier projet CMake de niveau supérieur, effectuez une configuration globale
# et incluez les sous-projets ici.
#
cmake_minimum_required (VERSION 3.8)

project ("TP-02-Passet_William")

# Incluez les sous-projets.
add_subdirectory ("Exo 1")
add_subdirectory ("Exo 2")
add_subdirectory ("Exo3")
add_subdirectory ("Exo 4")